feat: MVP rebuild - core modules (batch 1/8) [4/4]